Closed Bug 1700762 Opened 5 years ago Closed 5 years ago

extension pages cannot load subresources in a sandboxed iframe

Categories

(WebExtensions :: General, defect, P2)

defect

Tracking

(firefox89 fixed)

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: mixedpuppy, Assigned: mixedpuppy)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The unique origin of a sandbox iframe prevents an extension loading resources from itself.

This patch allows an extension page that has been sandboxed to continue to work (ie. load resources from itself, images, scripts, etc.). It has access to browser api if "allow-same-origin" is set.

The patch is moved from bug 1685123 which will depend on this patch, if we ever choose to land that bug.

Pushed by scaraveo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/80d904af6a6d iframe sandboxed extensions pages are allowed to load their own resources r=ckerschb,robwu
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: