Bug 1700762 iframe sandboxed extensions pages are allowed to load their own resources r=ckerschb,robwu

Differential Revision: https://phabricator.services.mozilla.com/D100834